--- a/config.toml
+++ b/config.toml
@@ -93,7 +93,7 @@ googleAnalytics = ""
     deviantart      = ""
     behance         = ""
     flickr          = ""
-    instagram       = ""
+    instagram       = "takeuchihitoshi"
     youtube         = ""
     vimeo           = ""
     vine            = ""
