--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hitoshitakeuchi.github.io/"
+baseURL = "http://hitoshitakeuchi.com/"
 canonifyurls = true
 languageCode = "ja-JP"
 title = "Hitoshi Takeuchi's Site"
