--- a/config.toml
+++ b/config.toml
@@ -107,4 +107,4 @@ googleAnalytics = ""
     facebook_admin  = ""
     twitter_domain  = ""
     twitter         = "htake_"
-    email           = "ht07081128@gmail.com"
+    email           = "htakeuchi.info@gmail.com"
