--- a/config.toml
+++ b/config.toml
@@ -70,8 +70,8 @@ googleAnalytics = ""
     weight = 1
 
 [[menu.main]]
-    name = "Blog"
-    url = "/blog"
+    name = "Works"
+    url = "/works"
     #identifier = "fa fa-newspaper-o"
     weight = 2
 
