--- a/config.toml
+++ b/config.toml
@@ -103,7 +103,7 @@ googleAnalytics = ""
     reddit          = ""
     pinterest       = ""
     googleplus      = ""
-    facebook        = "hitoshi.takeuchi.9216"
+    facebook        = "hitoshi.takeuchi.info"
     facebook_admin  = ""
     twitter_domain  = ""
     twitter         = "htake_"
