--- a/themes/hugo-future-imperfect/exampleSite/config.toml
+++ b/themes/hugo-future-imperfect/exampleSite/config.toml
@@ -9,7 +9,7 @@ googleAnalytics = ""
 
 [params]
     # Sets the meta tag description, usually reserved for the main page
-    description          = "HTML5 UP theme, Future Imperfect with some extra goodies, ported by Julio Pescador. Powered by Hugo"
+    description          = ""
     # This will appear on the top left of the navigation bar
     navbarTitle          = "Future Imperfect"
     # Social media buttons that appear on the sidebar
@@ -43,7 +43,7 @@ googleAnalytics = ""
 [params.intro]
     header    = "Hugo Future Imperfect"
 
-    paragraph = "Another fine responsive site template by <a href=\"http://html5up.net\">HTML5 UP</a>. Ported by Julio Pescador with some extra goodies <i class='fa fa-hand-peace-o'></i>"
+    paragraph = ""
 
     about     = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tellus lacus, auctor vehicula molestie quis, tempor quis velit. Quisque in quam ac leo efficitur vulputate. Phasellus ullamcorper aliquam sodales. Maecenas sit amet condimentum ipsum. Proin sit amet ligula elit. Mauris."
 
