--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ googleAnalytics = ""
     # Please see the favicon partial template for more information
     loadFavicon          = false
     faviconVersion       = ""
-
+    socialShare          = false
     # Load custom CSS or JavaScript files. This replaces the deprecated params
     # minifiedFilesCSS and minifiedFilesJS. The variable is an array so that you
     # can load multiple files if necessary. You can also load the standard theme
