--- a/themes/hugo-future-imperfect/theme.toml
+++ b/themes/hugo-future-imperfect/theme.toml
@@ -4,18 +4,18 @@
 name = "Hugo Future Imperfect"
 license = "MIT"
 licenselink = "https://github.com/jpescador/hugo-future-imperfect/blob/master/LICENSE.md"
-description = "Ported theme of HTML5 UP, future imperfect, with some extra goodies"
+description = ""
 homepage = "https://github.com/jpescador/hugo-future-imperfect"
 tags = ["blog", "responsive", "font awesome", "highlight.js"]
 features = ["html5", "css3", "responsive"]
 min_version = 0.15
 
 [author]
-  name = "Julio Pescador"
+  name = ""
   homepage = "https://jpescador.com"
 
 # If porting an existing theme
 [original]
-  name = "Future Imperfect"
+  name = ""
   homepage = "http://html5up.net/future-imperfect"
   repo = ""
