--- a/config.toml
+++ b/config.toml
@@ -28,6 +28,14 @@ googleAnalytics = ""
     loadFavicon          = false
     faviconVersion       = ""
     socialShare          = false
+    socialShareTwitter   = false
+    socialShareGoogleplus = false
+    socialShareFacebook  = false
+    socialShareReddit    = false
+    socialShareLinkedin  = false
+    socialShareStumbleupon = false
+    socialSharePinterest = false
+    socialShareEmail     = false
     # Load custom CSS or JavaScript files. This replaces the deprecated params
     # minifiedFilesCSS and minifiedFilesJS. The variable is an array so that you
     # can load multiple files if necessary. You can also load the standard theme
